Evol : gestion des polices

--- a/framework/scss/components/_templates.scss
+++ b/framework/scss/components/_templates.scss
@@ -380,7 +380,7 @@ body.modern {
         bottom: 0;
         left: 0;
         z-index: 100;
-        font-weight: normal;
+        font-weight: $weight-regular;
     }
 
 }
