--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -809,7 +809,7 @@
 
 // Thematic color
 .ds44-theme {
-    background-color: $ds44-contextual-color;
+    background-color: $ds44-contextual-color !important;
 }
 
 .ds44-bgDark {
