--- a/framework/scss/_config/_contextual-variables-mda.scss
+++ b/framework/scss/_config/_contextual-variables-mda.scss
@@ -18,4 +18,9 @@ body.mda {
             margin-bottom: 3rem;
         }
     }
+    footer [role="heading"] {
+        font-weight: 700!important;
+        font-family: Helvetica, Arial, sans-serif;
+    }
+    
 }
