--- a/framework/scss/components/_share.scss
+++ b/framework/scss/components/_share.scss
@@ -96,6 +96,8 @@
 
     .ds44-partage-sliderHome {
         width: 100%;
+        flex-direction: column;
+        padding: 1rem;
 
         > .ds44-list {
             flex-wrap: inherit;
