#JALIOS-216 Ajout class CSS

--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -1310,6 +1310,9 @@ h6.visually-hidden + * {
     .ds44-tablet-augment-pt {
         padding-top: 9rem !important;
     }
+    .ds44-tablet-augment-small-pt {
+        padding-top: 6rem !important;
+    }
 }
 
 @media (max-width: $ds44-medium - .0625) {
