Fix logo footer : largeur 160px pour MDA, pas Parents

--- a/framework/scss/_config/_contextual-variables-mda.scss
+++ b/framework/scss/_config/_contextual-variables-mda.scss
@@ -22,5 +22,8 @@ body.mda {
         font-weight: 700!important;
         font-family: Helvetica, Arial, sans-serif;
     }
+    footer .ds44-logo {
+        width: 160px!important;
+    }
     
 }
