--- a/framework/scss/_config/_contextual-variables-laboArcAntique.scss
+++ b/framework/scss/_config/_contextual-variables-laboArcAntique.scss
@@ -8,3 +8,8 @@
 
 $ds44-contextual-color : #1496dc !default;
 $ds44-contextual-hover : lighten($ds44-contextual-color, 10%) !default;
+
+#sousTitre.h2-like {
+    background: none !important;
+    padding: 0 0 0 0 !important;
+}
