--- a/framework/scss/_config/_contextual-variables-parents.scss
+++ b/framework/scss/_config/_contextual-variables-parents.scss
@@ -37,9 +37,9 @@ $ds44-font-sizes: (
     desktop : 1.25em    // 20px
   ),
   h4: (
-    mobile  : 1em, // 16px
-    tablet  : 1em,  // 16px
-    desktop : 1em     // 16px
+    mobile  : 1.125em, // 16px
+    tablet  : 1.125em,  // 16px
+    desktop : 1.125em     // 16px
   ),
   h5: (
     mobile  : 1.125em,  // 18px
@@ -128,7 +128,14 @@ $ds44-font-sizes: (
 }
 
 .ds44-ssTitreH1_home {
-    font-size: 3rem!important;
+  font-size: 3rem!important;
+}
+.ds44-cardDateNumber {
+  font-size: 1.875em!important;
+}
+.ds44-card .ds44-cardTitle{
+  font-family : "Plus Jakarta Sans", sans-serif;
+  font-weight: 700;
 }
 
 @media (min-width: 64em) {
