--- a/docs/_includes/carrousel/carrousel-x6.html
+++ b/docs/_includes/carrousel/carrousel-x6.html
@@ -1,16 +1,37 @@
 <div class="ds44-container-large">
-    <div class="mod--hidden ds44-list swipper-carousel-wrap ds44-posRel"  data-nb-visible-slides="1">
+    <div class="mod--hidden ds44-list swipper-carousel-wrap ds44-posRel ds44-carroussel-swiper-desktop"  data-nb-visible-slides="1">
         <div class="swiper-container">
             <ul class="swiper-wrapper ds44-list grid-1-small-1 has-gutter-l ds44-carousel-swiper">
-                <li class="swiper-slide">
-                    {% include card/card--mosaiques.html %}
-                </li>
-                <li class="swiper-slide">
-                    {% include card/card--mosaiques.html %}
-                </li>
-                <li class="swiper-slide">
-                    {% include card/card--mosaiques.html %}
-                </li>
+                {% if include.unique %}
+                    <li class="swiper-slide">
+                        {% include card/card--mosaiques.html %}
+                    </li>
+                {% else %}
+                    <li class="swiper-slide">
+                        {% include card/card--mosaiques.html %}
+                    </li>
+                    <li class="swiper-slide">
+                        {% include card/card--mosaiques.html %}
+                    </li>
+                    <li class="swiper-slide">
+                        {% include card/card--mosaiques.html %}
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+        <button class="swiper-button-prev swiper-button-disabled" type="button">
+            <i class="icon icon-left" aria-hidden="true"></i>
+            <span class="visually-hidden"></span>
+        </button>
+        <button class="swiper-button-next swiper-button-disabled" type="button">
+            <i class="icon icon-right" aria-hidden="true"></i>
+            <span class="visually-hidden"></span>
+        </button>
+    </div>
+    <div class="mod--hidden ds44-list swipper-carousel-wrap ds44-posRel ds44-carroussel-swiper-mobile"  data-nb-visible-slides="1">
+        <div class="swiper-container">
+            <ul class="swiper-wrapper ds44-list grid-1-small-1 has-gutter-l ds44-carousel-swiper">
+                {% include card/card--mosaiques-mobile.html %}
             </ul>
         </div>
         <button class="swiper-button-prev swiper-button-disabled" type="button">
