--- a/framework/scss/components/_card.scss
+++ b/framework/scss/components/_card.scss
@@ -329,6 +329,7 @@ body.modern {
     align-items: flex-start;
     display: flex;
     flex-direction: column;
+    flex: 1;
 
     @media (max-width: $ds44-small - .0625) {
         padding-right: $ds44-padding-box;
@@ -338,11 +339,6 @@ body.modern {
 
 .ds44-card__section--horizontal--img {
     width: auto;
-    min-width: 38%;
-    @media (min-width: $ds44-small) and (max-width: ($ds44-large - .0625)) {
-        min-width: 20%;
-    }
-
     &--dim110 {
         min-width: 31%;
         @media (min-width: $ds44-extra-large) {
