--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -1205,7 +1205,7 @@ input[type=radio],
 /* small screens */
 /* ------------- */
 
-@media (max-width: $ds44-large - .0625) {
+@media (max-width: $ds44-medium - .0625) {
 
     .ds44-medium-flex-col {
 
