Fix SD-180 : masquer overlay menu langues en responsif

--- a/docs/_includes/header/inc-header-musee-dobree.html
+++ b/docs/_includes/header/inc-header-musee-dobree.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </div>
-        <div id="subMenu-choixLangue" class="ds44-subMenu" data-sub-menu=""  aria-hidden="true">
+        <div id="subMenu-choixLangue" class="ds44-subMenu ds44-hide-tinyToLarge" data-sub-menu=""  aria-hidden="true">
             <p role="heading" aria-level="1" class="visually-hidden">Choix de la langue</p>
             <ul class="ds44-list">
                 <li>
