--- a/framework/scss/_config/_contextual-variables-loireAtlantique.scss
+++ b/framework/scss/_config/_contextual-variables-loireAtlantique.scss
@@ -8,3 +8,6 @@
 
 $ds44-contextual-color : #99E6D1 !default;
 $ds44-contextual-hover : lighten($ds44-contextual-color, 10%) !default;
+
+$ds44-font-family-base      : "Poppins", sans-serif;  
+$ds44-font-family-headings  : "Poppins", sans-serif;
