Feat : ajout police Poppins en ligne +suppr Poppins locale (pas la même Poppins !)

--- a/framework/scss/_libraries/_fonts.scss
+++ b/framework/scss/_libraries/_fonts.scss
@@ -3,7 +3,7 @@
 // ----------------
 // Font call
 // ----------------
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @font-face {
   font-family: 'Blogger Sans';
@@ -68,21 +68,6 @@
   font-style: normal;
 }
 
-@font-face {
-  font-family: 'Poppins';
-  src: url('../fonts/Poppins-Regular.woff2') format('woff2'),
-       url('../fonts/Poppins-Regular.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Poppins';
-  src: url('../fonts/Poppins-Regular.woff2') format('woff2'),
-       url('../fonts/Poppins-Regular.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-}
 
 
 // Fonts dedicated to Musée Dobrée
