--- a/framework/scss/components/_images.scss
+++ b/framework/scss/components/_images.scss
@@ -149,8 +149,14 @@
 /* Ratio img profil */
 .ds44-container-imgRatio--profil {
   padding-top: 0;
-  width: 110px;
-  height: 110px;
+  max-width: 11rem;
+  max-height: 11rem;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1/1;
+  &.ds44-m-std {
+    width: calc(100% - 3rem);
+  }
   img {
     width: 100%;
   }
