--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -14,10 +14,14 @@
     }
     p + .h3-like,
     p + h3,
+    blockquote + h3,
+    blockquote + h3-like,
     ul:not(.ds44-list):not(.ds44-collapser) + h3,
     ul:not(.ds44-list):not(.ds44-collapser) + .h3-like,
     p + .h4-like,
-    p + h4 {
+    p + h4,
+    blockquote + h4,
+    blockquote + h4-like {
       margin-top: $ds44-components-vmargin ;
     }
     ul:not(.ds44-list):not(.ds44-collapser) > li {
