--- a/framework/scss/components/_carrousel.scss
+++ b/framework/scss/components/_carrousel.scss
@@ -478,8 +478,8 @@
     }
     .swiper-button-prev,
     .swiper-container-rtl .swiper-button-prev {
-      left: auto;
-      right: 6rem;
+      left: 0;
+      right: auto;
     }
   }
 }
