--- a/docs/_includes/composants-transverses/sites-applis-patrimoine-noModal.html
+++ b/docs/_includes/composants-transverses/sites-applis-patrimoine-noModal.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="ds44-mobile-extra-smt">
-      {% include carrousel/carrousel-x5.html %}
+      {% include carrousel/carrousel-x5-clisson.html %}
     </div>
 
     <div class="txtcenter ds44-container-large ">
