--- a/docs/_includes/page/partial/recherche-resultats.html
+++ b/docs/_includes/page/partial/recherche-resultats.html
@@ -1,7 +1,7 @@
 <section class="ds44-container-large">
     <div class="ds44-flex-container ds44-results ds44-results--mapVisible ds44-results--empty">
         <div class="ds44-listResults ds44-innerBoxContainer ds44-innerBoxContainer--list">
-            <div class="ds44-js-results-container">
+            <div class="ds44-js-results-container" data-title-plural="Cantons" data-title-singular="Canton">
                 <div class="ds44-js-results-card" data-url="/json/search-card.json" aria-hidden="true"></div>
                 <div class="ds44-js-results-list" data-display-mode="inline">
                     <p id="ds44-results-new-search" class="h3-like mbs txtcenter center ds44--3xl-padding-t ds44--3xl-padding-b">
