--- a/docs/_includes/form/field/select/radio.html
+++ b/docs/_includes/form/field/select/radio.html
@@ -10,10 +10,10 @@
     <div class="ds44-select-container hidden">
         <div class="ds44-listSelect">
             <ul class="ds44-list" id="listbox-{{ savedId }}">
-                <li class="ds44-select-list_elem">
+                <li class="ds44-select-list_elem" role="option">
                     {% include form/field/box/radio.html name=savedName label="Choix 1" value="1" boxAttributes=boxAttributes %}
                 </li>
-                <li class="ds44-select-list_elem">
+                <li class="ds44-select-list_elem" role="option">
                     {% include form/field/box/radio.html name=savedName label="Choix 2" value="2" boxAttributes=boxAttributes %}
                 </li>
             </ul>
