JALIOS-263 : taille typo tuile MapBox

--- a/framework/scss/components/_overlays.scss
+++ b/framework/scss/components/_overlays.scss
@@ -160,7 +160,7 @@
         margin: 0 !important;
 
         .ds44-cardTitle {
-            font-size: 1.7rem;
+            font-size: 1.8rem!important;
         }
 
         &.ds44-cardIsFocus {
