JALIOS-263 (changement de font)

--- a/framework/scss/components/_overlays.scss
+++ b/framework/scss/components/_overlays.scss
@@ -160,6 +160,7 @@
         margin: 0 !important;
 
         .ds44-cardTitle {
+            font-family: $ds44-font-family-headings;
             font-size: 1.8rem!important;
         }
 
