Fix : RS-2181 - Add CSS property "display: block" and "height: 100%" for the link into headerContainer element and remove white outline for the img

--- a/framework/scss/components/_templates.scss
+++ b/framework/scss/components/_templates.scss
@@ -422,9 +422,13 @@ body.modern {
     img {
         outline: 5px solid transparent;
     }
+    a {
+        display:block;
+        height: 100%;
+    }
     a:focus-visible {
         img {
-            outline: 5px solid $ds44-hover-LA;
+            //outline: 5px solid $ds44-color-soft-text;
         }
     }
 }
