--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -197,6 +197,13 @@ $ds44-darkgray          : #333                !default;
 $ds44-LA                : #99E6D1             !default;
 $ds44-Agenda            : #FFD883             !default;
 $ds44-Dobree            : #FFBED2             !default;
+$ds44-Yellow            : #FFF15F             !default;
+$ds44-Green             : #EEF0A8             !default;
+$ds44-Coral             : #FFCABC             !default;
+$ds44-Purple            : #C3C5FA             !default;
+$ds44-Orange            : #F9CA97             !default;
+$ds44-Pink              : #C3C5FA             !default;
+$ds44-Blue              : #9ADCFF             !default;
 $ds44-dataviz-color     : #ff4a90             !default;
 $ds44-valid             : #24883E             !default;
 $ds44-valid-bg          : #F3F9F5             !default;
