--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -33,6 +33,7 @@ $ds44-font-icon             : "ds44-icons";                                   //
 
 // Font weights
 $weight-semibold: 600 !default; // Graisse absente de la grillade
+$weight-medium: 500 !default; // Graisse absente de la grillade
 
 // Font sizes (1rem value is "10px" equivalent)
 $ds44-font-size-base : 1.6em !default;
