--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -856,6 +856,7 @@
     padding: $ds44-padding-xxlarge*2 $ds44-padding-xlarge $ds44-padding-large $ds44-padding-xlarge;
 }
 
+/* ----- Nouvelle charte CD44 : Masque pour ne plus afficher ----
 .ds44-bgCircle {
     background-image: url(../../../assets/images/backgrounds/bkgd-circle-white.svg);
     background-repeat: no-repeat;
@@ -893,6 +894,7 @@
     background-position-y: bottom;
     background-repeat: repeat-x;
 }
+-----*/
 
 .ds44-bg-bacs-app {
     background-image: url(../../../assets/images/backgrounds/bkgd-file-attente-app.png);
