--- a/framework/scss/components/_boxes.scss
+++ b/framework/scss/components/_boxes.scss
@@ -158,6 +158,7 @@
       font-family: $ds44-font-family-headings;
     }
     line-height: 1.1;
+    font-weight:$weight-medium;
 }
 
 .ds44-boxPushContent {
