--- a/framework/scss/components/_templates.scss
+++ b/framework/scss/components/_templates.scss
@@ -445,7 +445,7 @@ body.modern {
     margin-bottom: $ds44-large-vmargin;
 }
 .ds44-introduction, .ds44-introduction-like {
-    font-weight: $weight-bold;
+    font-weight: $weight-medium;
 }
 .dobree-introduction {
     font-size: 1.25em;
