--- a/framework/scss/components/_share.scss
+++ b/framework/scss/components/_share.scss
@@ -13,6 +13,7 @@
     p[role="heading"] {
       font-size: 2.4rem;
       line-height: 1.2em;
+      font-weight: $weight-medium;
     }
     p.hashtag {
       font-size: 1.9rem;
