--- a/docs/_sass/base/_headings.scss
+++ b/docs/_sass/base/_headings.scss
@@ -64,7 +64,7 @@ h2,
 .c-text-passage h3,
 .c-text-passage h4,
 .c-text-passage h5 {
-    font-family: 'Blogger Sans', Arial, Helvetica, sans-serif;
+    font-family: "Poppins", Arial, Helvetica, sans-serif;
     font-weight: bold;
     color: #000000 !important;
 }
