--- a/docs/_includes/footer/footer-chateauClisson.html
+++ b/docs/_includes/footer/footer-chateauClisson.html
@@ -29,7 +29,7 @@
                         <a href="#" target="_blank" class="ds44-rsFootLink" title="Le château de Clisson sur Instagram - nouvelle fenêtre"><i class="icon icon-instagram" aria-hidden="true"></i><span class="visually-hidden">Le château de Clisson sur Instagram</span></a>
                     </li>
                     <li>
-                        <a href="#" target="_blank" class="ds44-rsFootLink" title="Le château de Clisson sur X - nouvelle fenêtre"><i class="icon icon-x" aria-hidden="true"></i><span class="visually-hidden">Le château de Clisson sur X</span></a>
+                        <a href="#" target="_blank" class="ds44-rsFootLink" title="Le château de Clisson sur linkedin - nouvelle fenêtre"><i class="icon icon-linkedin" aria-hidden="true"></i><span class="visually-hidden">Le château de Clisson sur linkedin</span></a>
                     </li>
                     <li>
                         <a href="#" target="_blank" class="ds44-rsFootLink" title="Le château de Clisson sur Youtube - nouvelle fenêtre"><i class="icon icon-youtube" aria-hidden="true"></i><span class="visually-hidden">Le château de Clisson sur Youtube</span></a>
