--- a/docs/_includes/partage/partage-footer.html
+++ b/docs/_includes/partage/partage-footer.html
@@ -1,9 +1,10 @@
 <p role="heading" aria-level="2" class="h4-like mbs txtcenter" id="idTitreFooter2">Suivez-nous sur les réseaux sociaux :</p>
 <ul class="ds44-list ds44-flex-container ds44-flex-align-center">
     <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Facebook - nouvelle fenêtre"><i class="icon icon-facebook" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Facebook</span></a></li>
-    <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur X - nouvelle fenêtre"><i class="icon icon-x" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur X</span></a></li>
     <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Instagram - nouvelle fenêtre"><i class="icon icon-instagram" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Instagram</span></a></li>
+    <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Linkedin - nouvelle fenêtre"><i class="icon icon-linkedin" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Linkedin</span></a></li>
     <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Youtube - nouvelle fenêtre"><i class="icon icon-youtube" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Youtube</span></a></li>
+    <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur TikTok - nouvelle fenêtre"><i class="icon icon-tiktok" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur TikTok</span></a></li>
     <li>
         <a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Magweb - nouvelle fenêtre"><i class="icon icon-magweb" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Magweb</span></a>
     </li>
