--- a/docs/_includes/partage/partage-sliderHome.html
+++ b/docs/_includes/partage/partage-sliderHome.html
@@ -11,7 +11,7 @@
           <a href="#" target="_blank" class="ds44-rsLink" title="Le Département de Loire-Atlantique sur Instagram - nouvelle fenêtre"><i class="icon icon-instagram" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Instagram</span></a>
         </li>
         <li class="ds44-flex-align-center">
-          <a href="#" target="_blank" class="ds44-rsLink" title="Le Département de Loire-Atlantique sur X - nouvelle fenêtre"><i class="icon icon-x" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur X</span></a>
+          <a href="#" target="_blank" class="ds44-rsLink" title="Le Département de Loire-Atlantique sur Linkedin - nouvelle fenêtre"><i class="icon icon-linkedin" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Linkedin</span></a>
         </li>
         <li class="ds44-flex-align-center">
           <a href="#" target="_blank" class="ds44-rsLink" title="Le Département de Loire-Atlantique sur Youtube - nouvelle fenêtre"><i class="icon icon-youtube" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Youtube</span></a>
