--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -96,6 +96,10 @@ $ds44-font-sizes: (
     mobile  : 1.0625em, // 17px
     desktop : 1.0625em // 17px
   ),
+  introduction: (
+    mobile  : 1.1875em, // 19px
+    desktop : 1.1875em  // 19px
+  ),
   menuHeaders: (
     mobile  : 1.625em,  // 26px
     desktop : 2.375em   // 38px
@@ -109,7 +113,7 @@ $ds44-font-sizes: (
     desktop : 1.75em    // 28px
   ),
   collapserLinks: (
-    mobile  : 1.125em,  // 18px
+    mobile  : 1em,  // 18px
     desktop : 1.125em   // 18px
   ),
   button: (
