Ajustements Page article

--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -24,9 +24,9 @@ $medium: 65em !default;     // 1024px (KNACSS crée ses breakpoints en retirant 
 // ----------
 
 // Font families
-$ds44-font-family-base      : Muli, Arial, Helvetica, sans-serif;             // texts standard font
+$ds44-font-family-base      : "Poppins", Arial, Helvetica, sans-serif;             // texts standard font
 $ds44-font-family-baseModern: Helvetica, Arial, sans-serif;                   // texts standard font for Musée Dobrée
-$ds44-font-family-headings  : "Blogger Sans", Arial, Helvetica, sans-serif;   // font for h1, h2.. h6
+$ds44-font-family-headings  : "Poppins", Arial, Helvetica, sans-serif;   // font for h1, h2.. h6
 $ds44-font-family-headingsModern  : "Monotype Modern Std", Arial, Helvetica, sans-serif;   // font for h1, h2 for Musée Dobrée
 $ds44-font-family-monospace : consolas, courier, monospace;                   // font for code and samples
 $ds44-font-icon             : "ds44-icons";                                   // icons
