--- a/docs/_includes/modal/cookies.html
+++ b/docs/_includes/modal/cookies.html
@@ -82,5 +82,5 @@
 </script>
 <!-- End Google Tag Manager -->
 
-<link rel="stylesheet" href="https://unpkg.com/orejime@latest/dist/orejime.css"/>
-<script src="https://unpkg.com/orejime@latest/dist/orejime.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/orejime@1.2.3/dist/orejime.css" />
+<script src="https://unpkg.com/orejime@1.2.3/dist/orejime.js"></script>
