Evol charte maj
Mise à jour des tailles de polices cf fichier excel Gaëlle

--- a/docs/_includes/partage/partage-header.html
+++ b/docs/_includes/partage/partage-header.html
@@ -1,5 +1,5 @@
 <div class="ds44-flex-container ds44-flex-align-center ds44-rsHeaderContainer">
-    <p role="heading" aria-level="2" class="h4-like mbm mrl ds44-hide-tiny-to-medium">Suivez-nous sur les réseaux</p>
+    <p role="heading" aria-level="2" class="h4-like mts mrl ds44-hide-tiny-to-medium">Suivez-nous sur les réseaux</p>
     <ul class="ds44-list ds44-flex-container ds44-fse">
         <li><a href="#" class="ds44-rsHeadLink" title="Le Département Loire Atlantique sur Facebook"><i class="icon icon-facebook" aria-hidden="true"></i><span class="visually-hidden">Le Département Loire Atlantique sur Facebook</span></a></li>
         <li><a href="#" class="ds44-rsHeadLink" title="Le Département Loire Atlantique sur Instagram"><i class="icon icon-instagram" aria-hidden="true"></i><span class="visually-hidden">Le Département Loire Atlantique sur Instagram</span></a></li>
