--- a/framework/scss/components/_carrousel.scss
+++ b/framework/scss/components/_carrousel.scss
@@ -41,7 +41,7 @@
         }
 
         @media screen and (max-width: $ds44-medium - .0625) {
-            padding: 1rem 0 0 0;
+            padding: 1rem 0 2rem 0;
             margin: 0 auto;
         }
 
